<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="650dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/dmsans"
        android:text="@string/create_task1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dmsans"
        android:text="@string/task_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/taskName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/round_textview"
        android:hint="@string/enter_a_task"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dmsans"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/taskDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/round_textview"
        android:drawableRight="@drawable/date"
        android:hint="Select Date"
        android:inputType="date"
        android:padding="10dp"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/dmsans"
            android:text="@string/start_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/dmsans"
            android:text="@string/end_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/startTime"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_textview"
            android:inputType="time"
            android:padding="10dp"
            android:singleLine="true"
            android:hint="time"/>

        <EditText
            android:id="@+id/endTime"
            tools:ignore="Autofill,TextFields"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/round_textview"
            android:inputType="time"
            android:padding="10dp"
            android:singleLine="true"
            android:hint="time"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dmsans"
        android:text="@string/add_note"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/taskNote"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/round_textview"
        android:inputType="text"
        android:padding="10dp"
        android:hint="time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dCancelBtn"
            android:layout_width="105sp"
            android:layout_height="50sp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_cancel"
            android:text="@string/cancel"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dCreateBtn"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_create"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"

            />

    </LinearLayout>


</LinearLayout>