<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTasks">

    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="650sp"
        android:background="@drawable/round_corner"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_task1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmsans"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmsans"
            android:layout_marginStart="25sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_textview"
            android:padding="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/enter_a_task"
            android:singleLine="true"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmsans"
            android:layout_marginStart="25sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/taskDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_textview"
            android:drawableRight="@drawable/date"
            android:padding="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:hint="Select Date"
            android:singleLine="true"
            android:inputType="date"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/dmsans"
                android:layout_marginStart="25sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/dmsans"
                android:layout_marginStart="65sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/startTime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/round_textview"
                android:inputType="time"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/endTime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/round_textview"
                android:inputType="time"
                android:padding="10dp"
                android:singleLine="true"
                tools:ignore="Autofill,TextFields" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmsans"
            android:layout_marginStart="25sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/taskNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_textview"
            android:padding="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:inputType="text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancelbtn"
                android:layout_width="105sp"
                android:layout_height="40sp"
                android:background="@drawable/btn_cancel"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                android:layout_marginTop="60dp"
                />

            <Button
                android:layout_width="100sp"
                android:layout_height="40sp"
                android:text="@string/create"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/btn_create"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"

                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>